--- a/starship.toml
+++ b/starship.toml
@@ -1,28 +1,22 @@
 # ~/.config/starship.toml
 
-# Inserts a blank line between shell prompts
 add_newline = true
 
-# Change command timeout from 500 to 1000 ms
 command_timeout = 1000
 
-# Change the default prompt format
 format = """\
 [╭╴](238)$env_var\
 $all[╰─](238)$character"""
 
-# Change the default prompt characters
 [character]
 success_symbol = "[︀](238)"
 error_symbol = "[︀](238)"
 
-# Shows an icon that should be included by zshrc script based on the distribution or os
 [env_var.STARSHIP_DISTRO]
 format = '[$env_value](bold white)'
 variable = "STARSHIP_DISTRO"
 disabled = false
 
-# Shows the username
 [username]
 style_user = "white bold"
 style_root = "black bold"
@@ -40,25 +34,34 @@ format = "at [$path]($style)[$read_only]($read_only_style) "
 use_os_path_sep = false
 
 [git_branch]
-symbol = "︀ "
-format = "on [$symbol$branch]($style) "
+symbol = "︀"
+format = "on [︀ at $symbol$branch]($style) "
 truncation_symbol = "…︀/"
 style = "bold green"
 
 [git_status]
 format = '[\($all_status$ahead_behind\)]($style) '
 style = "bold green"
-conflicted = "🏳︀"
-up_to_date = "︀ "
-untracked = "︀ "
+conflicted = "︀ "
+up_to_date = "︀"
+untracked = "︀${count} "
 ahead = "⇡${count}"
-diverged = "⇕⇡${ahead_count}⇣${behind_count}"
+diverged = "⇕⇡${ahead_count} ⇣${behind_count}"
 behind = "⇣${count}"
-stashed = "︀ "
-modified = "︀ "
-staged = '[++\($count\)](green)'
-renamed = "襁︀ "
-deleted = "︀ "
+stashed = "︀${count} "
+modified = "︀${count} "
+staged = "︀${count} "
+renamed = "︀${count} "
+deleted = "︀${count} "
+
+[git_commit]
+format = "[︀$hash$tag]($style) "
+style = "bold green"
+commit_hash_length = 7
+only_detached = false
+tag_disabled = false
+tag_symbol = " ︀"
+disabled = false
 
 [terraform]
 format = "via [︀ terraform $version]($style) 壟 [$workspace]($style) "
@@ -97,3 +100,10 @@ format = 'via [$symbol($version )(︀ $tfm )]($style)'
 
 [rust]
 symbol = '︀ '
+
+[cmake]
+symbol = 'CMake '
+
+[azure]
+symbol = '︀ '
+disabled = false
