--- a/starship.toml
+++ b/starship.toml
@@ -42,7 +42,7 @@ style = "bold green"
 [git_status]
 format = '[\($all_status$ahead_behind\)]($style) '
 style = "bold green"
-conflicted = "︀ "
+conflicted = "︀ "
 up_to_date = "︀"
 untracked = "︀${count} "
 ahead = "⇡${count}"
