--- a/settings.json
+++ b/settings.json
@@ -1,4 +1,5 @@
 {
+    "$help": "https://aka.ms/terminal-documentation",
     "$schema": "https://aka.ms/terminal-profiles-schema",
     "actions": 
     [
@@ -43,13 +44,13 @@
     {
         "defaults": 
         {
-            "acrylicOpacity": 0.85,
             "experimental.retroTerminalEffect": false,
             "font": 
             {
                 "face": "PragmataPro Liga",
-                "size": 16
+                "size": 14
             },
+            "opacity": 85,
             "useAcrylic": true
         },
         "list": 
@@ -67,24 +68,6 @@
                 "name": "Ubuntu",
                 "source": "Windows.Terminal.Wsl",
                 "startingDirectory": "/home/victor-borges"
-            },
-            {
-                "commandline": "powershell.exe",
-                "guid": "{61c54bbd-c2c6-5271-96e7-009a87ff44bf}",
-                "hidden": true,
-                "name": "Windows PowerShell"
-            },
-            {
-                "commandline": "cmd.exe",
-                "guid": "{0caa0dad-35be-5f56-a8ff-afceeeaa6101}",
-                "hidden": true,
-                "name": "Prompt de comando"
-            },
-            {
-                "guid": "{b453ae62-4e3d-5e58-b989-0a998ec441b8}",
-                "hidden": false,
-                "name": "Azure Cloud Shell",
-                "source": "Windows.Terminal.Azure"
             }
         ]
     },
