--- a/settings.json
+++ b/settings.json
@@ -44,11 +44,10 @@
     {
         "defaults": 
         {
-            "experimental.retroTerminalEffect": false,
+            "cursorShape": "underscore",
             "font": 
             {
-                "face": "PragmataPro Liga",
-                "size": 14
+                "face": "PragmataPro Liga"
             },
             "opacity": 85,
             "useAcrylic": true
@@ -56,7 +55,6 @@
         "list": 
         [
             {
-                "commandline": "C:\\Program Files\\PowerShell\\7\\pwsh.exe",
                 "guid": "{574e775e-4f2a-5b96-ac1e-a2962a402336}",
                 "hidden": false,
                 "name": "PowerShell",
@@ -66,8 +64,7 @@
                 "guid": "{2c4de342-38b7-51cf-b940-2309a097f518}",
                 "hidden": false,
                 "name": "Ubuntu",
-                "source": "Windows.Terminal.Wsl",
-                "startingDirectory": "/home/victor-borges"
+                "source": "Windows.Terminal.Wsl"
             }
         ]
     },
@@ -281,5 +278,6 @@
             "yellow": "#808000"
         }
     ],
+    "tabWidthMode": "titleLength",
     "useAcrylicInTabRow": true
 }
