--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -28,67 +28,66 @@ show_always = false
 [directory]
 truncation_length = 3
 truncation_symbol = "…︀/"
-home_symbol = "︀ ~"
+home_symbol = "  ~"
 read_only_style = "197"
-read_only = " ︀ "
+read_only = "  "
 format = "at [$path]($style)[$read_only]($read_only_style) "
-use_os_path_sep = false
 
 [git_branch]
-symbol = "︀"
-format = "on [︀ at $symbol$branch]($style) "
+symbol = "  "
+format = "on [  at $symbol$branch]($style) "
 truncation_symbol = "…︀/"
 style = "bold green"
 
 [git_status]
 format = '[\($all_status$ahead_behind\)]($style) '
 style = "bold green"
-conflicted = "︀ "
-up_to_date = "︀"
-untracked = "︀${count} "
+conflicted = "  "
+up_to_date = " "
+untracked = " ${count} "
 ahead = "⇡${count}"
 diverged = "⇕⇡${ahead_count} ⇣${behind_count}"
 behind = "⇣${count}"
-stashed = "︀${count} "
-modified = "︀${count} "
-staged = "︀${count} "
-renamed = "︀${count} "
-deleted = "︀${count} "
+stashed = " ${count} "
+modified = " ${count} "
+staged = " ${count} "
+renamed = " ${count} "
+deleted = " ${count} "
 
 [git_commit]
-format = "[︀$hash$tag]($style) "
+format = "[ $hash$tag]($style) "
 style = "bold green"
 commit_hash_length = 7
 only_detached = false
 tag_disabled = false
-tag_symbol = " ︀"
+tag_symbol = "  "
 disabled = false
 
 [terraform]
-format = "via [︀ terraform $version]($style) 壟 [$workspace]($style) "
+format = "via [  terraform $version]($style) 壟 [$workspace]($style) "
 
 [vagrant]
-format = "via [︀ vagrant $version]($style) "
+format = "via [  vagrant $version]($style) "
 
 [docker_context]
-format = "via [︀ $context](bold blue) "
+format = "via [  $context](bold blue) "
 
 [helm]
-format = "via [︀ $version](bold purple) "
+format = "via [  $version](bold purple) "
 
 [python]
-symbol = "︀ "
+symbol = "  "
 python_binary = "python3"
 
 [nodejs]
-format = "via [︀ $version](bold green) "
+format = "via [  $version](bold green) "
 disabled = true
 
 [ruby]
-format = "via [︀ $version]($style) "
+format = "via [  $version]($style) "
 
 [kubernetes]
-format = 'on [︀ $context\($namespace\)](bold purple) '
+format = 'on [  $context\($namespace\)](bold purple) '
 disabled = false
 
 [kubernetes.context_aliases]
@@ -96,17 +95,22 @@ disabled = false
 "clcreative-k8s-production" = "cl-k8s-prod"
 
 [dotnet]
+symbol = '  '
 detect_extensions = ["csproj", "fsproj", "xproj", "sln"]
-format = 'via [$symbol($version )(︀$tfm )]($style)'
+format = 'via [$symbol($version )( $tfm )]($style)'
 
 [rust]
-symbol = '︀ '
+symbol = '  '
 
 [cmake]
 symbol = 'CMake '
 
 [azure]
-symbol = '︀ '
+symbol = '  '
+disabled = true
+
+[gcloud]
+symbol = '  '
 disabled = true
 
 [time]
@@ -117,58 +121,58 @@ disabled = true
 
 [battery]
 style = "white"
-full_symbol = "︀"
-charging_symbol = "︀"
-unknown_symbol = "︀"
-empty_symbol = "︀"
+full_symbol = " "
+charging_symbol = " "
+unknown_symbol = " "
+empty_symbol = " "
 format = "[$symbol]($style) "
 
 [[battery.display]]
 threshold = 10
-charging_symbol = "︀"
-discharging_symbol = "︀"
+charging_symbol = " "
+discharging_symbol = " "
 
 [[battery.display]]
 threshold = 20
-charging_symbol = "︀"
-discharging_symbol = "︀"
+charging_symbol = " "
+discharging_symbol = " "
 
 [[battery.display]]
 threshold = 30
-charging_symbol = "︀"
-discharging_symbol = "︀"
+charging_symbol = " "
+discharging_symbol = " "
 
 [[battery.display]]
 threshold = 40
-charging_symbol = "︀"
-discharging_symbol = "︀"
+charging_symbol = " "
+discharging_symbol = " "
 
 [[battery.display]]
 threshold = 50
-charging_symbol = "︀"
-discharging_symbol = "︀"
+charging_symbol = " "
+discharging_symbol = " "
 
 [[battery.display]]
 threshold = 60
-charging_symbol = "︀"
-discharging_symbol = "︀"
+charging_symbol = " "
+discharging_symbol = " "
 
 [[battery.display]]
 threshold = 70
-charging_symbol = "︀"
-discharging_symbol = "︀"
+charging_symbol = " "
+discharging_symbol = " "
 
 [[battery.display]]
 threshold = 80
-charging_symbol = "︀"
-discharging_symbol = "︀"
+charging_symbol = " "
+discharging_symbol = " "
 
 [[battery.display]]
 threshold = 90
-charging_symbol = "︀"
-discharging_symbol = "︀"
+charging_symbol = " "
+discharging_symbol = " "
 
 [[battery.display]]
 threshold = 100
-charging_symbol = "︀"
-discharging_symbol = "︀"
+charging_symbol = " "
+discharging_symbol = " "
