--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -6,10 +6,10 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      PragmataPro Mono Liga Regular
-bold_font        PragmataPro Mono Liga Bold
-italic_font      PragmataPro Mono Liga Italic
-bold_italic_font PragmataPro Mono Liga Bold Italic
+font_family      PragmataPro Liga
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
